--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"classnames": "^2.3.1",
 		"eslint-plugin-react": "^7.30.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"moment": "^2.29.3",
 		"next": "12.1.6",
 		"next-compose-plugins": "^2.2.1",
 		"next-images": "^1.8.4",
@@ -37,6 +38,7 @@
 		"react-icons": "^4.4.0",
 		"react-toastify": "^9.0.5",
 		"react-use": "^17.4.0",
+		"react-use-lanyard": "^0.1.2",
 		"sass": "^1.53.0",
 		"tailwindcss": "^3.1.4",
 		"typescript-eslint": "^0.0.1-alpha.0",
