--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"description": "My personal webpage source :>",
 	"author": {
-		"email": "gunaydinberkant13@gmail.com",
+		"email": "berkant@slipyme.com",
 		"name": "Berkant GÜNAYDIN",
-		"url": "https://slip.slipyme.xyz"
+		"url": "https://slip.slipyme.com"
 	},
 	"license": "GPL-3.0",
 	"private": true,
@@ -14,33 +14,35 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
+		"taze": "taze -w",
 		"format": "prettier --write .",
 		"postbuild": "next-sitemap --config sitemap.config.js",
 		"format:watch": "onchange . -- prettier --write {{changed}}"
 	},
 	"dependencies": {
 		"@tippyjs/react": "^4.2.6",
-		"@typescript-eslint/eslint-plugin": "^5.29.0",
-		"autoprefixer": "^10.4.7",
-		"classnames": "^2.3.1",
-		"eslint-plugin-react": "^7.30.0",
+		"@typescript-eslint/eslint-plugin": "^5.42.0",
+		"autoprefixer": "^10.4.13",
+		"classnames": "^2.3.2",
+		"eslint-plugin-react": "^7.31.10",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"moment": "^2.29.3",
-		"next": "12.1.6",
+		"moment": "^2.29.4",
+		"next": "^13.0.2",
 		"next-compose-plugins": "^2.2.1",
 		"next-images": "^1.8.4",
-		"next-seo": "^5.4.0",
-		"next-sitemap": "^3.1.6",
-		"postcss": "^8.4.14",
+		"next-seo": "^5.14.0",
+		"next-sitemap": "^3.1.30",
+		"next-themes": "^0.2.1",
+		"postcss": "^8.4.18",
 		"prettier": "^2.7.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-icons": "^4.4.0",
-		"react-toastify": "^9.0.5",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.6.0",
+		"react-toastify": "^9.1.1",
 		"react-use": "^17.4.0",
-		"react-use-lanyard": "^0.1.2",
-		"sass": "^1.53.0",
-		"tailwindcss": "^3.1.4",
+		"sass": "^1.56.0",
+		"tailwindcss": "^3.2.2",
+		"taze": "^0.8.3",
 		"typescript-eslint": "^0.0.1-alpha.0",
 		"zxcvbn": "^4.4.2"
 	},
@@ -48,8 +50,8 @@
 		"@types/node": "18.0.0",
 		"@types/react": "18.0.14",
 		"@types/react-dom": "18.0.5",
-		"eslint": "^8.18.0",
-		"eslint-config-next": "^12.1.6",
+		"eslint": "^8.27.0",
+		"eslint-config-next": "^13.0.2",
 		"typescript": "4.7.4"
 	}
 }
