--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "slip.slipyme.xyz",
+	"name": "slip.slipyme.com",
 	"version": "0.1.0",
 	"description": "My personal webpage source :>",
 	"author": {
