--- a/package.json
+++ b/package.json
@@ -1,78 +1,58 @@
 {
-	"name": "webpage",
-	"version": "5.1.0",
-	"description": "Okul Projeleri...",
+	"name": "slip.slipyme.com",
+	"version": "1.1.2",
+	"description": "My personal webpage source :>",
 	"author": {
-		"email": "gunaydinberkant13@gmail.com",
+		"email": "berkant@slipyme.com",
 		"name": "Berkant GÜNAYDIN",
 		"url": "https://slip.slipyme.com"
 	},
 	"license": "GPL-3.0",
+	"private": true,
 	"scripts": {
-		"dev": "next-remote-watch",
+		"dev": "next dev",
 		"build": "next build",
-		"postbuild": "next-sitemap --config sitemap.config.js",
-		"start": "next start --port 8080",
+		"start": "next start",
 		"lint": "next lint",
+		"taze": "taze -w",
 		"format": "prettier --write .",
-		"taze": "taze major -w",
+		"postbuild": "next-sitemap --config sitemap.config.js",
 		"format:watch": "onchange . -- prettier --write {{changed}}"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^2.2.2",
 		"@tippyjs/react": "^4.2.6",
-		"classnames": "^2.3.2",
-		"framer-motion": "^8.0.1",
-		"next": "^13.1.0",
-		"next-auth": "^4.18.7",
-		"next-pwa": "^5.6.0",
-		"next-seo": "^5.15.0",
-		"next-themes": "^0.2.1",
-		"nextjs-progressbar": "^0.0.16",
-		"nodemailer": "^6.8.0",
-		"perman": "^1.0.2",
-		"react-icons": "^4.7.1",
-		"react-parallax-tilt": "^1.7.77",
-		"react-responsive-carousel": "^3.2.23",
-		"react-toastify": "^9.1.1",
-		"react-use": "^17.4.0",
-		"sweetalert2": "^11.6.16",
-		"taze": "^0.8.5",
-		"zustand": "^4.1.5"
-	},
-	"devDependencies": {
-		"@types/node": "^18.11.17",
-		"@types/react": "^18.0.26",
-		"@typescript-eslint/eslint-plugin": "^5.47.0",
-		"@typescript-eslint/parser": "^5.47.0",
+		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"autoprefixer": "^10.4.13",
-		"css-loader": "^6.7.3",
-		"eslint": "^8.30.0",
-		"eslint-config-next": "^13.1.0",
+		"classnames": "^2.3.2",
 		"eslint-plugin-react": "^7.31.11",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"next-remote-watch": "^2.0.0",
-		"next-sitemap": "^3.1.43",
-		"onchange": "^7.1.0",
+		"moment": "^2.29.4",
+		"next": "^13.1.1",
+		"next-compose-plugins": "^2.2.1",
+		"next-images": "^1.8.4",
+		"next-seo": "^5.15.0",
+		"next-sitemap": "^3.1.44",
+		"next-themes": "^0.2.1",
 		"postcss": "^8.4.20",
 		"prettier": "^2.8.1",
-		"prettier-plugin-tailwindcss": "^0.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.7.1",
+		"react-toastify": "^9.1.1",
+		"react-use": "^17.4.0",
 		"sass": "^1.57.1",
 		"tailwindcss": "^3.2.4",
-		"typescript": "^4.9.4"
+		"taze": "^0.8.5",
+		"typescript-eslint": "^0.0.1-alpha.0",
+		"webhook-discord": "^3.7.8",
+		"zxcvbn": "^4.4.2"
 	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+	"devDependencies": {
+		"@types/node": "18.0.0",
+		"@types/react": "18.0.14",
+		"@types/react-dom": "18.0.5",
+		"eslint": "^8.31.0",
+		"eslint-config-next": "^13.1.1",
+		"typescript": "4.7.4"
 	}
 }
