--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "slip.slipyme.com",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "My personal webpage source :>",
 	"author": {
 		"email": "berkant@slipyme.com",
@@ -38,6 +38,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1",
+		"react-simple-tetris": "^0.3.1",
 		"react-toastify": "^9.1.1",
 		"react-use": "^17.4.0",
 		"sass": "^1.57.1",
