--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "slip.slipyme.com",
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"description": "My personal webpage source :>",
 	"author": {
 		"email": "berkant@slipyme.com",
@@ -23,6 +23,7 @@
 		"@tippyjs/react": "^4.2.6",
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"autoprefixer": "^10.4.13",
+		"axios": "^1.3.2",
 		"classnames": "^2.3.2",
 		"eslint-plugin-react": "^7.31.11",
 		"eslint-plugin-react-hooks": "^4.6.0",
@@ -30,6 +31,7 @@
 		"next": "^13.1.1",
 		"next-compose-plugins": "^2.2.1",
 		"next-images": "^1.8.4",
+		"next-qrcode": "^2.4.0",
 		"next-seo": "^5.15.0",
 		"next-sitemap": "^3.1.44",
 		"next-themes": "^0.2.1",
