--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "slip.slipyme.com",
-	"version": "1.1.4",
+	"version": "1.2.0",
 	"description": "My personal webpage source :>",
 	"author": {
 		"email": "berkant@slipyme.com",
@@ -14,48 +14,48 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"taze": "taze -w",
+		"taze": "taze major -w",
 		"format": "prettier --write .",
 		"postbuild": "next-sitemap --config sitemap.config.js",
 		"format:watch": "onchange . -- prettier --write {{changed}}"
 	},
 	"dependencies": {
 		"@tippyjs/react": "^4.2.6",
-		"@typescript-eslint/eslint-plugin": "^5.48.0",
-		"autoprefixer": "^10.4.13",
-		"axios": "^1.3.2",
+		"@typescript-eslint/eslint-plugin": "^5.60.1",
+		"autoprefixer": "^10.4.14",
+		"axios": "^1.4.0",
 		"classnames": "^2.3.2",
-		"eslint-plugin-react": "^7.31.11",
+		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"moment": "^2.29.4",
-		"next": "^13.1.1",
+		"next": "^13.4.7",
 		"next-compose-plugins": "^2.2.1",
-		"next-images": "^1.8.4",
-		"next-qrcode": "^2.4.0",
-		"next-seo": "^5.15.0",
-		"next-sitemap": "^3.1.44",
+		"next-images": "^1.8.5",
+		"next-qrcode": "^2.4.1",
+		"next-seo": "^6.1.0",
+		"next-sitemap": "^4.1.8",
 		"next-themes": "^0.2.1",
-		"postcss": "^8.4.20",
-		"prettier": "^2.8.1",
+		"postcss": "^8.4.24",
+		"prettier": "^2.8.8",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.7.1",
+		"react-icons": "^4.10.1",
 		"react-simple-tetris": "^0.3.1",
-		"react-toastify": "^9.1.1",
+		"react-toastify": "^9.1.3",
 		"react-use": "^17.4.0",
-		"sass": "^1.57.1",
-		"tailwindcss": "^3.2.4",
-		"taze": "^0.8.5",
+		"sass": "^1.63.6",
+		"tailwindcss": "^3.3.2",
+		"taze": "^0.11.2",
 		"typescript-eslint": "^0.0.1-alpha.0",
 		"webhook-discord": "^3.7.8",
 		"zxcvbn": "^4.4.2"
 	},
 	"devDependencies": {
-		"@types/node": "18.0.0",
-		"@types/react": "18.0.14",
-		"@types/react-dom": "18.0.5",
-		"eslint": "^8.31.0",
-		"eslint-config-next": "^13.1.1",
-		"typescript": "4.7.4"
+		"@types/node": "18.16.19",
+		"@types/react": "18.2.14",
+		"@types/react-dom": "18.2.6",
+		"eslint": "^8.44.0",
+		"eslint-config-next": "^13.4.7",
+		"typescript": "5.1.6"
 	}
 }
