--- a/package.json
+++ b/package.json
@@ -21,41 +21,43 @@
 	},
 	"dependencies": {
 		"@tippyjs/react": "^4.2.6",
-		"@typescript-eslint/eslint-plugin": "^5.60.1",
-		"autoprefixer": "^10.4.14",
-		"axios": "^1.4.0",
+		"autoprefixer": "^10.4.16",
+		"axios": "^1.5.1",
 		"classnames": "^2.3.2",
-		"eslint-plugin-react": "^7.33.1",
-		"eslint-plugin-react-hooks": "^4.6.0",
 		"moment": "^2.29.4",
-		"next": "^13.4.12",
+		"next": "^13.5.4",
 		"next-compose-plugins": "^2.2.1",
 		"next-images": "^1.8.5",
-		"next-qrcode": "^2.5.0",
+		"next-qrcode": "^2.5.1",
 		"next-seo": "^6.1.0",
-		"next-sitemap": "^4.1.8",
+		"next-sitemap": "^4.2.3",
 		"next-themes": "^0.2.1",
-		"postcss": "^8.4.27",
-		"prettier": "^3.0.0",
+		"postcss": "^8.4.31",
+		"prettier": "^3.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.10.1",
+		"react-icons": "^4.11.0",
 		"react-simple-tetris": "^0.3.1",
 		"react-toastify": "^9.1.3",
 		"react-use": "^17.4.0",
-		"sass": "^1.64.1",
+		"sass": "^1.69.1",
 		"tailwindcss": "^3.3.3",
-		"taze": "^0.11.2",
-		"typescript-eslint": "^0.0.1-alpha.0",
+		"taze": "^0.11.3",
 		"webhook-discord": "^3.7.8",
 		"zxcvbn": "^4.4.2"
 	},
 	"devDependencies": {
-		"@types/node": "18.17.1",
-		"@types/react": "18.2.17",
-		"@types/react-dom": "18.2.7",
-		"eslint": "^8.46.0",
-		"eslint-config-next": "^13.4.12",
-		"typescript": "5.1.6"
+		"@types/node": "20.8.4",
+		"@types/react": "18.2.27",
+		"@types/react-dom": "18.2.12",
+		"@typescript-eslint/eslint-plugin": "^5.61.0",
+		"@typescript-eslint/parser": "^5.61.0",
+		"autoprefixer": "^10.4.14",
+		"css-loader": "^6.8.1",
+		"eslint": "^8.44.0",
+		"eslint-config-next": "^13.4.8",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"typescript": "5.2.2"
 	}
 }
