--- a/package.json
+++ b/package.json
@@ -1,63 +1,46 @@
 {
-	"name": "slip.slipyme.com",
-	"version": "1.2.1",
-	"description": "My personal webpage source :>",
-	"author": {
-		"email": "berkant@slipyme.com",
-		"name": "Berkant GÜNAYDIN",
-		"url": "https://slip.slipyme.com"
-	},
-	"license": "GPL-3.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"taze": "taze major -w",
-		"format": "prettier --write .",
-		"postbuild": "next-sitemap --config sitemap.config.js",
-		"format:watch": "onchange . -- prettier --write {{changed}}"
-	},
-	"dependencies": {
-		"@tippyjs/react": "^4.2.6",
-		"autoprefixer": "^10.4.16",
-		"axios": "^1.5.1",
-		"classnames": "^2.3.2",
-		"moment": "^2.29.4",
-		"next": "^13.5.4",
-		"next-compose-plugins": "^2.2.1",
-		"next-images": "^1.8.5",
-		"next-qrcode": "^2.5.1",
-		"next-seo": "^6.1.0",
-		"next-sitemap": "^4.2.3",
-		"next-themes": "^0.2.1",
-		"postcss": "^8.4.31",
-		"prettier": "^3.0.3",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-icons": "^4.11.0",
-		"react-simple-tetris": "^0.3.1",
-		"react-toastify": "^9.1.3",
-		"react-use": "^17.4.0",
-		"sass": "^1.69.1",
-		"tailwindcss": "^3.3.3",
-		"taze": "^0.11.3",
-		"webhook-discord": "^3.7.8",
-		"zxcvbn": "^4.4.2"
-	},
-	"devDependencies": {
-		"@types/node": "20.8.4",
-		"@types/react": "18.2.27",
-		"@types/react-dom": "18.2.12",
-		"@typescript-eslint/eslint-plugin": "^5.61.0",
-		"@typescript-eslint/parser": "^5.61.0",
-		"autoprefixer": "^10.4.14",
-		"css-loader": "^6.8.1",
-		"eslint": "^8.44.0",
-		"eslint-config-next": "^13.4.8",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"typescript": "5.2.2"
-	}
+  "name": "mywebpage",
+  "version": "1.2.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postbuild": "next-sitemap --config sitemap.config.js",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "classnames": "^2.5.1",
+    "next": "14.0.4",
+    "next-images": "^1.8.5",
+    "next-qrcode": "^2.5.1",
+    "next-seo": "^6.4.0",
+    "next-sitemap": "^4.2.3",
+    "next-themes": "^0.2.1",
+    "prettier": "^3.1.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "react-simple-tetris": "^0.3.1",
+    "react-toastify": "^9.1.3",
+    "react-use": "^17.4.2",
+    "sass": "^1.69.7",
+    "tippy.js": "^6.3.7",
+    "webhook-discord": "^3.7.8",
+    "zxcvbn": "^4.4.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  }
 }
