--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "classnames": "^2.5.1",
     "next": "14.0.4",
     "next-images": "^1.8.5",
-    "next-qrcode": "^2.5.1",
     "next-seo": "^6.4.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
