--- a/package.json
+++ b/package.json
@@ -8,39 +8,40 @@
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap --config sitemap.config.js",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "taze": "taze major -w"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "next": "14.0.4",
     "next-images": "^1.8.5",
-    "next-seo": "^6.4.0",
+    "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.5",
     "qrcode.react": "^3.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-simple-tetris": "^0.3.1",
-    "react-toastify": "^9.1.3",
-    "react-use": "^17.4.2",
-    "sass": "^1.69.7",
-    "tippy.js": "^6.3.7",
+    "react-toastify": "^10.0.4",
+    "react-use": "^17.5.0",
+    "sass": "^1.71.1",
+    "taze": "^0.13.3",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
